# College-Enrolment-System

./: Makefile  README.md  docker-compose.yml  pyproject.toml  todolist
backend/: celerybeat-schedule  manage.py  postgres  pyproject.toml
backend/accounts/: admin.py  enums.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/college_enrolment_system/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/config/: .env.template
backend/fixtures/: offers.json  universities.json  users.json
backend/recruitment/: admin.py  apps.py  enums.py  tasks.py  urls.py  utils.py
backend/recruitment/migrations/: 0001_initial.py  0002_alter_application_student.py  0002_alter_university_confirmed_students.py  0003_alter_application_offer_and_more.py  0003_alter_offer_confirmed_students.py  0004_alter_offerstage_end_date_and_more.py  0004_examsgroup.py
backend/recruitment/models/: __init__.py  application.py  exam.py  exams_group.py  offer.py  offer_stage.py  university.py
backend/recruitment/serializers/: application.py  exam.py  exams_group.py  offer.py  offer_stage.py  university.py
backend/recruitment/views/: application.py  exam.py  exams_group.py  offer.py  offer_stage.py  university.py
deployment/docker/: Dockerfile
